# server/api/Models/MovieModels.cs
@@ -2,4 +2,4 @@
 
 namespace api.Models;
 
-public record CreateMovieDto([Required]string Title, [Required]int Year, string? Description, string? Starring);
+public record CreateMovieDto([Required]string Title, [Required]int Year, string? Description, string? Starring, IFormFile? Photo);
